--- a/index.html
+++ b/index.html
@@ -1,28 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Step By Step Form</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel="stylesheet" href="style.css">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9651RH8QDZ"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9651RH8QDZ"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-        gtag('config', 'G-9651RH8QDZ');
-    </script>
+      gtag('config', 'G-9651RH8QDZ');
+  </script>
+</head>
+
+<body>
+  
+<div class="modal-wrap">
+  <div class="modal-header"><span class="is-active"></span><span></span><span></span></div>
+  <div class="modal-bodies">
+    <div class="modal-body modal-body-step-1 is-showing">
+      <div class="title">Step 1</div>
+      <div class="description">Hello there, Let's play a game.</div>
+      <form>
+        <input type="text" placeholder="Name"/>
+        <input type="email" placeholder="Email"/>
+        <div class="text-center">
+          <div class="button">Start</div>
+        </div>
+      </form>
+    </div>
+    <div class="modal-body modal-body-step-2">
+      <div class="title">Step 2</div>
+      <div class="description">Would you rather</div>
+      <form>
+        <label>
+          <input type="radio" name="radio"/>live one life that lasts 1,000 years?
+        </label>
+        <label>
+          <input type="radio" name="radio" id="radio2"/>live 10 lives that last 100 years each?
+        </label>
+        <div class="text-center fade-in">
+          <div class="button">Next</div>
+        </div>
+      </form>
+    </div>
+    <div class="modal-body modal-body-step-3">
+      <div class="title">Step 3</div>
+      <div class="description">Check your email for the game results.</div>
+      <div class="text-center">
+        <div class="button">Done!</div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="text-center">
+  <div class="rerun-button">ReRun</div>
+</div>
+  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 
     <script src="script.js"></script>
-    <title>qr-test</title>
-</head>
-<body>
-    
-    <h1>qr-test</h1>
 
-    <form action="">
-        
-    </form>
 </body>
 </html>
