--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Step By Step Form</title>
+  <title>Registration Form</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="style.css">
@@ -29,6 +29,7 @@
       <form>
         <input type="text" placeholder="Name"/>
         <input type="email" placeholder="Email"/>
+        <input type="modelnum" placeholder="Model Number"/>
         <div class="text-center">
           <div class="button">Start</div>
         </div>
@@ -36,13 +37,13 @@
     </div>
     <div class="modal-body modal-body-step-2">
       <div class="title">Step 2</div>
-      <div class="description">Would you rather</div>
+      <div class="description">Select your subscription</div>
       <form>
         <label>
-          <input type="radio" name="radio"/>live one life that lasts 1,000 years?
+          <input type="radio" name="radio"/>$7.99/ Month
         </label>
         <label>
-          <input type="radio" name="radio" id="radio2"/>live 10 lives that last 100 years each?
+          <input type="radio" name="radio" id="radio2"/>$79.99/ Year
         </label>
         <div class="text-center fade-in">
           <div class="button">Next</div>
@@ -51,7 +52,7 @@
     </div>
     <div class="modal-body modal-body-step-3">
       <div class="title">Step 3</div>
-      <div class="description">Check your email for the game results.</div>
+      <div class="description">Check your email to activate your device.</div>
       <div class="text-center">
         <div class="button">Done!</div>
       </div>
