--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="modal-bodies">
     <div class="modal-body modal-body-step-1 is-showing">
       <div class="title">Step 1</div>
-      <div class="description">Hello there, Let's play a game.</div>
+      <div class="description">Register your purchase here!</div>
       <form>
         <input type="text" placeholder="Name"/>
         <input type="email" placeholder="Email"/>
